# DTS

./: .coverage  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  mcts_output.json  pyproject.toml
backend/api/: server.py
backend/core/: prompts.py
backend/core/dts/: __init__.py  aggregator.py  config.py  engine.py  retry.py  tree.py  types.py  utils.py
backend/core/dts/components/: __init__.py  evaluator.py  generator.py  researcher.py  simulator.py
backend/core/mcts/: __init__.py  agent.py  aggregator.py  tree.py  types.py
backend/llm/: client.py  errors.py  tools.py  types.py
backend/services/: dts_service.py
backend/utils/: config.py  logging.py
frontend/src/components/config/: ConfigForm.tsx
tests/: conftest.py  test_placeholder.py
tests/api/: test_schemas.py  test_server.py
tests/core/: test_prompts.py
tests/core/dts/: __init__.py  test_aggregator.py  test_config.py  test_engine.py  test_tree.py  test_types.py  test_utils.py
tests/core/dts/components/: __init__.py  test_evaluator.py  test_generator.py  test_researcher.py  test_simulator.py
tests/llm/: __init__.py  test_client.py  test_errors.py  test_tools.py  test_types.py
tests/services/: test_dts_service.py
